Add vulnerable JS library scanner and UI integration
Introduces a vulnerable JavaScript library scanner to the extension.

--- a/devtools/panel.html
+++ b/devtools/panel.html
@@ -594,6 +594,10 @@
                         <span class="summary-count" id="summaryCredentials">0</span>
                         <span class="summary-label">Credentials</span>
                     </div>
+                    <div class="summary-item medium" id="summaryLibrariesItem">
+                        <span class="summary-count" id="summaryLibraries">0</span>
+                        <span class="summary-label">JS Libs</span>
+                    </div>
                     <div class="summary-item low">
                         <span class="summary-count" id="summaryEmails">0</span>
                         <span class="summary-label">Emails</span>
@@ -614,6 +618,7 @@
                         <option value="all">All Categories</option>
                         <option value="apiKeys">API Keys</option>
                         <option value="credentials">Credentials</option>
+                        <option value="vulnerableLibraries">Vulnerable Libraries</option>
                         <option value="emails">Emails</option>
                         <option value="apiEndpoints">API Endpoints</option>
                         <option value="parameters">Parameters</option>
